@startuml ZooSimulation
title 動物園シミュレーション

ZooSimulation o-- NextAction
NextAction --> ZooOwner
ZooOwner o-- AnimalTrader
ZooOwner o-- Zoo
ZooOwner <--> AnimalTraderService
AnimalTraderService --> AnimalTrader
Zoo o-- Animal
AnimalTrader o-- Animal

class ZooSimulation {
  + Run(): void
}

class NextAction {
  + ZooOwner: ZooOwner
  + ListNextActions(): {key[string]: ActionMethod}
  - IntroduceNewAnimal()
  - QuitGame()
  - CreateZooOwner(): ZooOwner
}

class AnimalTraderService {
  - AnimalTraders: AnimalTrader[]
  + Contract()
}

class ZooOwner {
  + Name: string
  + OwnZoo: Zoo
  + ContractedAnimalTraders: AnimalTrader[]
  + BuyAnimal()
  + BreedAnimal()
  + TradeAnimal()
  + RescueAnimal()
  + ContractWithAnimalTrader()
}

class Zoo {
  + Name: string
  + Animals: Animal[]
}

class Animal {
  + Name: string
  + Price: int
  + Bow(): sttring
}

class AnimalTrader {
  + Name: string
  + Animals: Animal[]
  + ListBuyableAnimals(): void
}

@enduml
